--- a/src/main/resources/templates/kty/find_food/food_test2.html
+++ b/src/main/resources/templates/kty/find_food/food_test2.html
@@ -73,7 +73,7 @@
 					for="kw3Option8">술집</label>
 			</div>
 			<div class="parking_check_type">
-				<span id="parking_type">주차 공간</span><input type="checkbox"
+				<span id="parking_type">주차 공간</span><br><input type="checkbox"
 					id="kw4Option1" class="chk_par" name="ParkingType" value="있음"
 					
 					th:checked="${kw4 != null and kw4.contains('있음')}"> <label
