--- a/src/main/resources/static/css/product_detail_kdg.css
+++ b/src/main/resources/static/css/product_detail_kdg.css
@@ -182,3 +182,44 @@ input:focus, input:active, button:focus, button:active {
     font-weight: bold;
    pointer-events: none; /* 버튼 클릭 비활성화 */
 }
+
+/* swiper */
+.swiper {
+      width: 100%;
+      height: 300px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .swiper-slide {
+      background-size: cover;
+      background-position: center;
+    }
+
+    .mySwiper2 {
+      height: 80%;
+      width: 100%;
+    }
+
+    .mySwiper {
+      height: 20%;
+      box-sizing: border-box;
+      padding: 10px 0;
+    }
+
+    .mySwiper .swiper-slide {
+      width: 25%;
+      height: 100%;
+      opacity: 0.4;
+    }
+
+    .mySwiper .swiper-slide-thumb-active {
+      opacity: 1;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
