--- a/src/main/resources/templates/kdg/fail.html
+++ b/src/main/resources/templates/kdg/fail.html
@@ -3,24 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>예약 실패</title>
-
-<style>
-	.backBtn {
-		width: 100%;
-	    height: 56px;
-	    border: none;
-	    font-size: 15px;
-	    line-height: 56px;
-	    color: #fff;
-	    background-color: #e61c51;
-	    text-align: center;
-	    cursor: pointer;
-	    border-radius: 4px 4px 4px 4px;
-	    margin-top: 28px;
-	    font-weight: bold;
-}
-</style>
-
+<link rel="stylesheet" href="/css/kdg_kakaopay_fail.css">
 </head>
 <body>
     <h1>결제에 실패하였습니다.</h1>
