header nav modify

--- a/src/main/resources/templates/jjj/header.html
+++ b/src/main/resources/templates/jjj/header.html
@@ -101,7 +101,7 @@
 					<div class="jj_list">
 						<a th:href="@{/more/noticeList}">공지사항</a>
 						<!-- 테스트 -->
-						<a th:href="@{/more/inquiry}">1:1문의</a> <a th:href="@{/user/event}">이벤트</a>
+						<a th:href="@{/more/inquiry}">1:1문의</a> <!-- <a th:href="@{/user/event}">이벤트</a>-->
 					</div></li>
 				<li>
 					<div class="weather-container">
