--- a/src/main/resources/static/css/my_booking.css
+++ b/src/main/resources/static/css/my_booking.css
@@ -2,10 +2,11 @@
 	display: flex;
 	padding: 15px;
 	background: #fff;
-	border: 1px solid grey;
+	border: 1px solid #dddddd;
 	border-radius: 4px;
 	box-sizing: border-box;
 	margin-bottom: 15px;
+	color: #232323;
 }
 
 #left {
@@ -151,10 +152,11 @@
 	display: flex;
 	padding: 15px;
 	background: #fff;
-	border: 1px solid grey;
+	border: 1px solid #dddddd;
 	border-radius: 4px;
 	box-sizing: border-box;
 	margin-bottom: 15px;
+	margin-top: 40px;
 }
 
 #left {
