--- a/src/main/resources/templates/khk/adminNavbar.html
+++ b/src/main/resources/templates/khk/adminNavbar.html
@@ -105,7 +105,7 @@ input[type="submit"]:hover {
 	font-family: "The-Jamsil-OTF-3-Regular", Arial, sans-serif;
 	font-weight: 200;
 	width: 160px;
-	padding: 25px 0px;
+	padding: 25px 20px;
 	text-decoration: none;
 	color: var(--main-color);
 	transition: background-color 0.3s;
@@ -113,7 +113,7 @@ input[type="submit"]:hover {
 	display: inline-block;
 	white-space: nowrap;
 	font-size: 20px;
-	text-align: center;
+	/* text-align: center; */
 }
 
 .admin_navbar a:hover {
@@ -129,6 +129,7 @@ input[type="submit"]:hover {
 	color: #fff;
 	margin: 0 5px;
 }
+
 
 /* 여기서부터 nav제외 나머지 css */
 .adminbody {
