--- a/src/main/resources/templates/pyr/my_productlist.html
+++ b/src/main/resources/templates/pyr/my_productlist.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 <html layout:decorate="~{jjj/header}">
-<div id="my_infomation_modify" layout:fragment="content"
-	class="container my-3">
+<div id="my_infomation_modify" layout:fragment="content" class="container my-3">
+
 	<head>
 
 
 
-<link rel="stylesheet" href="/css/pyr_my_productlist.css">
-<title>대구 숙박은 DAE BAK</title>
+		<link rel="stylesheet" href="/css/pyr_my_productlist.css">
+		<title>대구 숙박은 DAE BAK</title>
 	</head>
 
 
@@ -21,19 +21,15 @@
 						정보</a></li>
 				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}">예약
 						내역</a></li>
-				<li class="mypage_sidebar"><a
-					th:href="@{/user/mypage/my_inquiry}"> 문의 내역</a></li>
-				<li class="mypage_sidebar"><a
-					th:href="@{/user/mypage/partner_reg}">파트너 신청</a>
-				<li class="mypage_sidebar"><a
-					th:href="@{/user/mypage/my_partner_reg}">파트너 신청 내역</a></li>
+				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_inquiry}"> 문의 내역</a></li>
+				<li class="mypage_sidebar"><a th:href="@{/user/mypage/partner_reg}">파트너 신청</a>
+				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_partner_reg}">파트너 신청 내역</a></li>
 				</li>
-				<li class="mypage_sidebar"><a
-					th:href="@{/user/mypage/my_productList}" class="active"
-					sec:authorize="hasRole('ROLE_PARTNER')"> 내 상품
+				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_productList}" class="active"
+						sec:authorize="hasRole('ROLE_PARTNER')"> 내 상품
 						목록</a></li>
-			<li class="mypage_sidebar"><a
-				th:href="@{/user/mypage/my_acc_bookList}" sec:authorize="hasRole('ROLE_PARTNER')"> 내 업소 예약리스트</a></li>
+				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_acc_bookList}"
+						sec:authorize="hasRole('ROLE_PARTNER')"> 내 업소 예약리스트</a></li>
 			</ul>
 		</nav>
 
@@ -51,13 +47,11 @@
 		<div th:unless="${isEmpty}">
 
 			<div id="Container">
-				<div id="mainContent" class="main_content"
-					th:each="accommodation : ${paging.content}">
+				<div id="mainContent" class="main_content" th:each="accommodation : ${paging.content}">
 					<div class="top">
 						<div class="left">
-							<img
-								th:src="${accommodation.acc_img ?: '/img/acc_img/no_photo.png'}"
-								alt="Main Image" width="100%" height="100%" class="main_img">
+							<img th:src="${accommodation.acc_img ?: '/img/acc_img/no_photo.png'}" alt="Main Image"
+								width="100%" height="100%" class="main_img">
 						</div>
 						<div class="right">
 							<div class="info">
@@ -73,8 +67,8 @@
 							<div class="partner_comment">
 								<strong>사장님 한마디</strong>
 								<div>
-									<p
-										th:if="${accommodation.acc_explain == null || accommodation.acc_explain == ''}">숙소에
+									<p th:if="${accommodation.acc_explain == null || accommodation.acc_explain == ''}">
+										숙소에
 										대한 설명을 등록해 주세요</p>
 									<p th:text="${accommodation.acc_explain}"></p>
 								</div>
@@ -83,8 +77,7 @@
 					</div>
 					<div id="pdMainEditArea">
 						<a th:href="@{|/partner/product/registerRoom/${accommodation.id}|}">
-							<button id="pdShowAddRoonBtn" type="button"
-								style="margin-bottom: 20px;">객실등록 / 조회</button>
+							<button id="pdShowAddRoonBtn" type="button" style="margin-bottom: 20px;">객실등록 / 조회</button>
 						</a>
 					</div>
 				</div>
@@ -95,18 +88,15 @@
 			<div id="accPaging">
 				<div th:if="${!paging.isEmpty()}">
 					<ul class="pagination">
-						<li class="page_previous"
-							th:classappend="${!paging.hasPrevious()} ? 'disabled'"><a
-							class="page_link" th:href="@{|?page=${paging.number-1}|}"><span>이전</span></a>
+						<li class="page_previous" th:classappend="${!paging.hasPrevious()} ? 'disabled'"><a
+								class="page_link" th:href="@{|?page=${paging.number-1}|}"><span>이전</span></a>
 						</li>
 						<li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
 							th:if="${page >= paging.number-2 and page <= paging.number+2}"
-							th:classappend="${page == paging.number} ? 'active'"
-							class="page_item"><a th:text="${page + 1}" class="page_link"
-							th:href="@{|?page=${page}|}"></a></li>
-						<li class="page_next"
-							th:classappend="${!paging.hasNext()} ? 'disabled'"><a
-							class="page_link" th:href="@{|?page=${paging.number+1}|}"><span>다음</span></a>
+							th:classappend="${page == paging.number} ? 'active'" class="page_item"><a
+								th:text="${page + 1}" class="page_link" th:href="@{|?page=${page}|}"></a></li>
+						<li class="page_next" th:classappend="${!paging.hasNext()} ? 'disabled'"><a class="page_link"
+								th:href="@{|?page=${paging.number+1}|}"><span>다음</span></a>
 						</li>
 					</ul>
 				</div>
@@ -119,9 +109,9 @@
 			<div id=noAccfild>
 
 				<div id="noAcc">
-				<h1>등록한 숙소가 없습니다.</h1>
-			<span id="noAcc2">지금 숙소를 등록해보세요</span>
-			 <a th:href="@{/user/mypage/my_partner_reg}"	class="btn_red">숙소 등록하러</a>
+					<h1>등록한 숙소가 없습니다.</h1>
+					<span id="noAcc2">지금 숙소를 등록해보세요</span>
+					<a th:href="@{/user/mypage/my_partner_reg}" class="btn_red">숙소 등록하러</a>
 				</div>
 
 			</div>
@@ -131,6 +121,6 @@
 		<script src="/js/pyr_add_product.js"></script>
 
 	</body>
-	
+
 
 </html>
