--- a/src/main/resources/templates/khk/adminNavbar.html
+++ b/src/main/resources/templates/khk/adminNavbar.html
@@ -376,6 +376,11 @@ background-color: var(--sub-color);
 	font-size: 25px;
 	margin-top: 5px;
 }
+
+a:focus, a:active {
+    outline: none;
+    border: none;
+}
 </style>
 </head>
 <body class="admin_nav_body">
