--- a/src/main/resources/templates/kty/admin_main.html
+++ b/src/main/resources/templates/kty/admin_main.html
@@ -9,6 +9,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <link rel="stylesheet" th:href="@{/css/admin_dashboard.css}">
    <script th:src="@{/js/admin_dashboard.js}"></script>
+   <style>
+    body {
+        line-height: initial;
+    }
+    .card-body{
+		line-height:1.5;
+	}
+</style>
 </head>
 
 <body>
