--- a/src/main/resources/templates/kty/find/daegu_room.html
+++ b/src/main/resources/templates/kty/find/daegu_room.html
@@ -25,8 +25,9 @@
 						<option id="kw2Option2" value="북구" th:selected="${kw2 == '북구'}">대구
 							,북구</option>
 						<option id="kw2Option3" value="서구" th:selected="${kw2 == '서구'}">대구,
-							서구</option> 남구
-						</option>
+							서구</option> 
+							<option id="kw2Option4" value="남구" th:selected="${kw2 == '남구'}">대구,
+							남구</option>
 						<option id="kw2Option5" value="동구" th:selected="${kw2 == '동구'}">대구,
 							동구</option>
 						<option id="kw2Option6" value="달서구" th:selected="${kw2 == '달서구'}">대구,
