--- a/src/main/resources/static/css/my_booking.css
+++ b/src/main/resources/static/css/my_booking.css
@@ -341,6 +341,7 @@ color:grey;
 	display: inline;
 	margin: 0;
 	padding: 0;
+	
 }
 
 .page-number {
@@ -359,4 +360,25 @@ color:grey;
     pointer-events: none;
     cursor: default; /* 선택적으로 커서 모양 변경 */
     opacity: 0.5; /* 선택적으로 투명도 조절 */
+}
+
+.prevPageBtn {
+    border-radius: 6px 0px 0px 6px;
+}
+
+.nextPageBtn {
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.6;
+    padding: 8px 12px;
+}
+
+.page_next {
+    border-radius: 0px 6px 6px 0px;
+}
+
+
+/* '다음' 버튼이 disabled 상태가 아닐 때의 배경색 */
+.page-item:not(.disabled) .nextPageBtn {
+    background-color: #ff7b7ba3;
 }
