--- a/src/main/resources/templates/kty/find_food/food_test2.html
+++ b/src/main/resources/templates/kty/find_food/food_test2.html
@@ -9,7 +9,7 @@
 <html layout:decorate="~{jjj/header}">
 <div id="my_infomation_modify" layout:fragment="content"
 	class="container my-3">
-	<div class="my_position">대구 맛집 검색
+	<div class="my_position" style="margin-left:30px;">대구 맛집 검색
  <!--  	<div id="current_my_dongnae"><br> </div> -->
 	</div>
 	<div class="left-area">
