--- a/src/main/resources/templates/syw/adminNotice_list.html
+++ b/src/main/resources/templates/syw/adminNotice_list.html
@@ -3,7 +3,7 @@
 
 
 <head>
-	<title>DAEBAK</title>
+	<title>관리자 페이지</title>
 	<link rel="stylesheet" href="/css/admin_notice.css">
 	<meta charset="utf-8">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
