--- a/src/main/resources/templates/syw/inquiryModify.html
+++ b/src/main/resources/templates/syw/inquiryModify.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>DAEBAK</title>
+	<title>대구 숙박은 DAE BAK</title>
 	<link rel="stylesheet" href="/css/inquiryModify.css">
 </head>
 
