--- a/src/main/resources/templates/syw/my_inquiry.html
+++ b/src/main/resources/templates/syw/my_inquiry.html
@@ -4,7 +4,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 
 <head>
-	<title>DAEBAK</title>
+	<title>대구 숙박은 DAE BAK</title>
 	<link rel="stylesheet" href="/css/my_inquiry.css">
 	<title>Inquiry List</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
