--- a/src/main/resources/templates/syw/noticeList.html
+++ b/src/main/resources/templates/syw/noticeList.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="stylesheet" href="/css/noticeList.css">
-	<title>DAEBAK</title>
+	<title>대구 숙박은 DAE BAK</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>
 		$(document).ready(function () {
