--- a/src/main/resources/templates/khk/adminMain.html
+++ b/src/main/resources/templates/khk/adminMain.html
@@ -5,7 +5,7 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <head>
-<title>관리자 메인 페이지</title>
+<title>관리자 페이지</title>
 <style>
 body {
 	font-family: Arial, sans-serif;
