--- a/src/main/resources/templates/khk/adminNavbar.html
+++ b/src/main/resources/templates/khk/adminNavbar.html
@@ -9,7 +9,7 @@
 	src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 <meta charset="utf-8">
 
-<title>관리자 메인 페이지</title>
+<title>관리자 페이지</title>
 
 <style>
 :root {
