--- a/src/main/resources/templates/kty/admin_main.html
+++ b/src/main/resources/templates/kty/admin_main.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   <title>DAEBAK</title>
+   <title>관리자 페이지</title>
    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
