--- a/src/main/resources/templates/syw/inquiry_list.html
+++ b/src/main/resources/templates/syw/inquiry_list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>DAEBAK</title>
+	<title>관리자 페이지</title>
 	<link rel="stylesheet" href="/css/inquiry_list.css">
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 	<meta charset="utf-8">
