--- a/src/main/resources/templates/kty/cancle_request_list.html
+++ b/src/main/resources/templates/kty/cancle_request_list.html
@@ -54,7 +54,7 @@
 
         <button class="cancel-button"
                 th:attr="class=${(cancelReq.result != null and !#strings.isEmpty(cancelReq.result)) ? 'cancel-button grayscale-button' : 'cancel-button'}"
-                th:disabled="${(cancelReq.result != null and !#strings.isEmpty(cancelReq.result))}">결제취소</button>
+                th:disabled="${(cancelReq.result != null and !#strings.isEmpty(cancelReq.result))}">취소하기</button>
         <button class="reject-button">거절하기</button>
 
                  
